# otsliced

./: CMakeLists.txt  README.rst
.github/workflows/: build.yml
cmake/: otslicedConfig.cmake.in
distro/debian/: changelog  control  rules
distro/rpm/: otsliced.spec
distro/windows/: README.txt  installer.nsi
lib/include/: CMakeLists.txt
lib/include/otsliced/: otsliced.hxx  otslicedprivate.hxx
lib/src/: CMakeLists.txt  SlicedInverseRegression.cxx  SlicedInverseRegressionResult.cxx
lib/src/otsliced/: SlicedInverseRegression.hxx  SlicedInverseRegressionResult.hxx
lib/test/: CMakeLists.txt  t_SlicedInverseRegression_std.cxx
python/doc/: conf.py.in  index.rst
python/doc/developer_guide/architecture/: architecture.rst
python/doc/examples/: plot_example1.py
python/doc/user_manual/: user_manual.rst
python/src/: CMakeLists.txt  SlicedInverseRegression.i  SlicedInverseRegressionResult.i  SlicedInverseRegressionResult_doc.i.in  SlicedInverseRegression_doc.i.in  __init__.py  otsliced_module.i
python/test/: CMakeLists.txt  t_SlicedInverseRegression_std.py  t_docstring.py
